--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | E-commerce product page</title>
  <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +15,7 @@
   <header class="header">
     <nav class="nav">
       <section class="menu">
-        <h1 class="menu__title">Sneakers</h1>
+        <img src="./images/logo.svg" alt="logo" class="menu__title">
         <div class="menu__container">
         <button class="button">
           <img src="./images/icon-menu.svg" alt="menu">
