--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <header class="header">
     <nav class="nav">
       <section class="menu">
-        <img src="./images/logo.svg" alt="logo" class="menu__title">
+        <img src="images/logo.svg" alt="logo" class="menu__title">
         <div class="menu__container">
         <button class="button">
-          <img src="./images/icon-menu.svg" alt="menu">
+          <img src="images/icon-menu.svg" alt="menu">
         </button>
         <ul class="nav__list">
           <li class="nav__item">Collections</li>
@@ -35,7 +35,7 @@
   </header>
   <main class="main">
     <section class="img-wrapper">
-    <img src="./images/image-product-1.jpg" alt="product" class="img__photo">
+    <img src="images/image-product-1.jpg" alt="product" class="img__photo">
   </section>
   <section class="text-wrapper">
     <p class="text__title">SNEAKER COMPANY</p>
@@ -49,6 +49,6 @@
     <button class="submit" type="submit">Add to card</button>
   </section>
   </main>
-<script src="./script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
