add js for nav button and backdrop

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
  <link rel="stylesheet" href="style.css">
 </head>
 <body class="body">
+  <div class="backdrop"></div>
   <header class="header">
     <nav class="nav">
       <section class="menu">
